# r1pw

./: 1pw.sh  Cargo.toml  LICENSE  README.md  TODO.md  mock.sh  program_flow.dot
src/: cache.rs  clipboard.rs  dmenu.rs  lib.rs  main.rs  model.rs  op.rs
src/model/: logical.rs  op.rs  storage.rs
