[package]
name = "r1pw"
version = "0.1.0"
authors = ["Yarek Tyshchenko <yarekt@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.14"
shellexpand = "2.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
log = "0.4.8"
pretty_env_logger = "0.4.0"
itertools = "0.9.0"
anyhow = "1.0.31"
